feature(socialAuth): set up twitter social login authentication
configure passport strategy to handle twitter social login
add route for twitter social login
create mock strategy to test twitter social authentication
create mock user for twitter social authentication test
install passport twitter package to handle social authentication
handle user information retrieved from twitter login
update swagger documentation to reflect new routes
write tests for twitter social authentication.

Delivers #160618102
